--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-600 active:bg-indigo-700;
+    }
+
+    .btn-secondary {
+        @apply text-indigo-500 p-2 font-medium rounded hover:bg-indigo-100 hover:text-indigo-700 active:bg-indigo-200;
+    }
+
+    .txt-primary {
+        @apply border border-gray-400 p-2 w-full rounded focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500;
+    }
+}
