--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,10 @@
         @apply border border-gray-400 p-2 w-full rounded ml-2 focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500;
     }
 
+    .txt-search {
+        @apply border border-gray-400 w-1/4 px-1 rounded focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 mt-auto;
+    }
+
     .window-primary {
         @apply bg-white p-6 rounded-lg shadow-2xl w-full max-w-2xl mx-auto my-10;
     }
