--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@
 }
 
 @layer components {
+    .btn-navbar {
+        @apply mt-4 bg-orange-600 rounded-sm hover:bg-orange-700
+    }
+
     .btn-primary {
         @apply bg-indigo-500 text-white py-2 px-4 rounded hover:bg-indigo-600 active:bg-indigo-700;
     }
