--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     h2 {
-        @apply text-3xl font-medium mb-4;
+        @apply text-3xl font-medium mb-2;
     }
 
     label {
@@ -14,7 +14,7 @@
 
 @layer components {
     .btn-navbar {
-        @apply mt-4 bg-orange-600 rounded-sm hover:bg-orange-700
+        @apply bg-orange-600 text-white py-1 px-4 rounded hover:bg-orange-700 active:bg-orange-900;
     }
 
     .btn-primary {
