--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,10 @@
         @apply border border-gray-400 p-2 w-full rounded ml-2 focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500;
     }
 
+    .txt-primary-error {
+        @apply border border-red-400 focus:outline-none focus:border-red-500 focus:ring-red-500;
+    }
+
     .txt-search {
         @apply border border-gray-400 w-1/4 px-1 rounded focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 mt-auto;
     }
