--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,10 @@
         @apply bg-red-500 hover:bg-red-600 active:bg-red-700
     }
 
+    .pdf-window {
+        @apply w-full my-4;
+    }
+
     .txt-primary {
         @apply border border-gray-400 p-2 w-full rounded ml-2 focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500;
     }
